--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,11 +15,13 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>Ángeles y demonios</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>3 metros sobre el cielo</p>
+ <p>Tarzán</p>
+ <p>Torrente 3</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
