Resolve merge conflict issue #4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,13 +15,12 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
-<<<<<<< HEAD
+
  <p>(Contenido)</p>
-<p>Harry Potter
-Geronimo Stilton</p>
-=======
+<p>Harry Potter</p>
+<p>Geronimo Stilton</p>
  <p>Ángeles y demonios</p>
->>>>>>> issue#X4
+
 </section>
  <section>
 <b>Películas</b>
